# ccc-schedule

./: .gitignore  CLAUDE.md  COLLECTOR_INTEGRATION_GUIDE.md  CONTRIBUTING.md  FILTER_TEST_GUIDE.md  LICENSE  README.md  index.html  onboard.py  pyproject.toml  test-filters.html
.github/: SECURITY.md  dependabot.yml
.github/workflows/: code-quality.yml  deploy-pages.yml  test.yml
ccc-schedule-examples/: COMPARISON.md  server.py
ccc-schedule-examples/citrus/: index.html
ccc-schedule-examples/mtsac/: index.html
ccc-schedule-examples/north-orange-county/: index.html  test.html
ccc-schedule-examples/rhe/: index.html
ccc-schedule-examples/rio-hondo/: index.html
ccc-schedule-examples/rio-hondo-live/: index.html
ccc-schedule-examples/rio-hondo-modern/: index.html
ccc-schedule-examples/west-valley-mission/: downloader.py  index.html
ccc-schedule-onboarding/: README.md  requirements.txt
ccc-schedule-onboarding/demo-college/: README.md  index.html  scraper.py
ccc-schedule-onboarding/examples/: rio_hondo_onboarding.py
ccc-schedule-onboarding/src/: __init__.py  data_normalizer.py  llm_parser.py  onboarding_cli.py
ccc-schedule-onboarding/templates/: basic-scraper.py
colleges/north-orange-county/: config.json
colleges/rio-hondo/: config.json
colleges/west-valley-mission/: config.json
css/: accessibility.css  schedule.css
data/: college-template.json  courses.json  example.json  schema.json
data/schemas/: base.json
docs/: ACCESSIBILITY.md  API.md  DEPLOYMENT.md  LLM_ONBOARDING.md  LOCAL_DEVELOPMENT.md  QUICKSTART.md  STANDARDIZATION.md  SUBMISSION_GUIDELINES.md  WORKFLOW_GUARDRAILS.md
examples/: rio_hondo_onboarding.py
js/: accessibility-enhancements.js  schedule-enhanced.js  schedule.js
scripts/: convert-rio-hondo.py  setup-local-college.py
src/: __init__.py  cli.py  college_config.py  data_normalizer.py  data_utils.py  llm_parser.py  models.py  onboarding_cli.py  schema_validator.py  validators.py
src/parsers/: __init__.py  (+1 more)
tests/: CLAUDE.md  __init__.py  conftest.py  test_accessibility.py  test_async_example.py  test_basics.py  test_data_utils.py  test_frontend_elements.py  test_llm_parser.py  test_models.py  test_responsive_design.py  test_schedule_utils.py  test_search_functionality.py
(+250 files in other folders)
